# curator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  catalog.toml  install.sh  justfile  mycelium.toml  package-lock.json  package.json  rust-toolchain.toml
.claude/commands/curator/: install.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
crates/curator-config/: Cargo.toml
crates/curator-config/src/: hash.rs  identity.rs  lib.rs
docs/: FOLLOWUPS.md
examples/: config.toml  tabs.toml
scripts/: gen-latest-json.sh  install-app.sh  release.sh  test-install-app.sh  tooling.env
src/: chrome.css  chrome.js  default-config.toml  error.html  index.html  placeholder.html
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: awareness.rs  chrome_hit.rs  commands.rs  config.rs  cursor_arbiter.rs  escape.rs  identity.rs  insecure.rs  lib.rs  main.rs  notification.rs  session.rs  watcher.rs  webviews.rs  zorder.rs
src/inject/: badge.js  escape-click.js  notification.js  tauri-guard.js  visibility.js
