[package]
name = "curator"
version = "0.7.0"
edition = "2021"
description = "A dedicated, always-findable home for the handful of browser tabs you can't afford to lose. macOS only."
authors = ["Lachlan Collins <lachlan@lsjc.com.au>"]
license = "MIT"
repository = "https://github.com/Lockyc/curator"
readme = "../README.md"
keywords = ["tauri", "macos", "browser", "tabs", "webview"]
categories = ["gui"]
publish = false

[lib]
name = "curator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# The shared sidebar chrome, embedded as string consts; build.rs writes them into ../src (the
# frontendDist Tauri embeds). Pinned by rev — bump in lockstep with config-core + the toolchain.
chrome-core = { git = "https://github.com/Lockyc/chrome-core", rev = "87ac08f5e2362a468ffb5efb7bdf5d3f50915232" }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
notify = "6"
dirs = "5"
# OS CSPRNG for the per-webview sentinel anti-forgery nonce (webviews.rs::random_nonce).
getrandom = "0.2"
# Persist each window's size + position (+ maximized) across launches, keyed by Tauri label.
tauri-plugin-window-state = "2"
# In-app updates: check GitHub releases, download+verify (minisign), install and relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Shared, domain-free TOML config primitives (house-style `fmt`, colour parsing) used by both
# curator and warden — git dep so the build-from-source install flow needs no extra setup.
# Pinned by rev (same as warden's pin): the shared house formatter must format identically in
# both apps, so an unpinned dep that floats forward in only one repo would silently diverge
# `curator fmt` from `warden fmt`. Bump this in lockstep with warden + config-core's own pin.
config-core = { git = "https://github.com/Lockyc/config-core", rev = "4742ec48499ade023dbfc14014cbcd9482d22aba" }

# For accepting allowlisted self-signed TLS certs via WKWebView's auth-challenge delegate, and
# for posting native banners via UserNotifications (tauri-plugin-notification's NSUserNotification
# backend is a silent no-op on macOS 26 — see notification.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotification",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationResponse",
    "UNNotificationTrigger",
    "block2",
] }

# ── chrome-core local-dev override (managed by `just chrome-dev` / `just chrome-pin`) ──
# Leave COMMENTED in git — an active path patch breaks fresh clones & CI. `just chrome-dev`
# uncomments it to build against a local ../../chrome-core (incl. uncommitted edits); `just chrome-pin`
# re-pins the rev above to ../../chrome-core's HEAD and re-comments this. `just gate` refuses to pass
# while it's active. Do not hand-edit these two lines — use the recipes.
#PATCH#[patch."https://github.com/Lockyc/chrome-core"]
#PATCH#chrome-core = { path = "../../chrome-core" }
