[package]
name = "curator"
version = "0.7.4"
edition = "2021"
description = "A dedicated, always-findable home for the handful of browser tabs you can't afford to lose. macOS only."
authors = ["Lachlan Collins <lachlan@lsjc.com.au>"]
license = "MIT"
repository = "https://github.com/Lockyc/curator"
readme = "../README.md"
keywords = ["tauri", "macos", "browser", "tabs", "webview"]
categories = ["gui"]
publish = false

[lib]
name = "curator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# The shared sidebar chrome, embedded as string consts; build.rs writes them into ../src (the
# frontendDist Tauri embeds). Pinned by rev — bump in lockstep with config-core + the toolchain.
chrome-core = { git = "https://github.com/Lockyc/chrome-core", rev = "723e57ecd0ee010d925021dd8a08b69adbad9dea" }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
notify = "6"
dirs = "5"
# OS CSPRNG for the per-webview sentinel anti-forgery nonce (webviews.rs::random_nonce).
getrandom = "0.2"
# Persist each window's size + position (+ maximized) across launches, keyed by Tauri label.
tauri-plugin-window-state = "2"
# In-app updates: check GitHub releases, download+verify (minisign), install and relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# curator's config parser, extracted into its own platform-neutral crate (mirrors warden's
# warden-config). It re-exports config-core's shared house formatter + colour parsing, so the app
# reaches those via `curator_config::{format_str, format_file, Colour}` — config-core is a transitive
# dep through it, pinned in crates/curator-config/Cargo.toml (config-pin edits it there).
curator-config = { path = "../crates/curator-config" }

# For accepting allowlisted self-signed TLS certs via WKWebView's auth-challenge delegate, and
# for posting native banners via UserNotifications (tauri-plugin-notification's NSUserNotification
# backend is a silent no-op on macOS 26 — see notification.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotification",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationResponse",
    "UNNotificationTrigger",
    "block2",
] }

# The chrome-core / config-core [patch] local-dev overrides live in the workspace-root Cargo.toml
# (../Cargo.toml), scoped #PATCH:chrome# / #PATCH:config# — managed by `just chrome-dev`/`chrome-pin`
# + `config-dev`/`config-pin`. A [patch] must sit in the workspace root, not a member manifest.
