[package]
name = "curator"
version = "0.8.0"
edition = "2021"
description = "A dedicated, always-findable home for the handful of browser tabs you can't afford to lose. macOS only."
license = "MIT"
repository = "https://github.com/Lockyc/curator"
readme = "../README.md"
keywords = ["tauri", "macos", "browser", "tabs", "webview"]
categories = ["gui"]
publish = false

[lib]
name = "curator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# The shared sidebar chrome, embedded as string consts; build.rs writes them into ../src (the
# frontendDist Tauri embeds). Pinned by rev — bump in lockstep with config-core + the toolchain.
chrome-core = { git = "https://github.com/Lockyc/chrome-core", rev = "243e9f6aef7ec622f80a5452493fb9a4e1fcda33" }
# Shared release tooling + build_stamp. build.rs materializes scripts/*.sh (git-ignored) and stamps
# BUILD_GIT_SHA/BUILD_DATE. default-features=false keeps the build-dep zero-tauri (resolver 2 keeps
# it separate from the runtime-featured [dependencies] entry below). Pinned by rev.
shell-core = { git = "https://github.com/Lockyc/shell-core", rev = "17f27b3b95d41188a90a6f48b7a094484c1c975a", default-features = false }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
notify = "6"
dirs = "5"
# OS CSPRNG for the per-webview sentinel anti-forgery nonce (webviews.rs::random_nonce).
getrandom = "0.2"
# window-state/updater/process are kept explicit so their capability permissions resolve, but plugin
# *registration* now flows through shell_core::register_plugins (runtime feature), not the builder.
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Shared Tauri runtime helpers (register_plugins). runtime feature pulls tauri; the build-dep above
# stays zero-tauri. Same rev as the build-dep — bump both in lockstep.
shell-core = { git = "https://github.com/Lockyc/shell-core", rev = "17f27b3b95d41188a90a6f48b7a094484c1c975a", features = ["runtime"] }
# curator's config parser, extracted into its own platform-neutral crate (mirrors warden's
# warden-config). It re-exports config-core's shared house formatter + colour parsing, so the app
# reaches those via `curator_config::{format_str, format_file, Colour}` — config-core is a transitive
# dep through it, pinned in crates/curator-config/Cargo.toml (config-pin edits it there).
curator-config = { path = "../crates/curator-config" }

# For accepting allowlisted self-signed TLS certs via WKWebView's auth-challenge delegate, and
# for posting native banners via UserNotifications (tauri-plugin-notification's NSUserNotification
# backend is a silent no-op on macOS 26 — see notification.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotification",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationResponse",
    "UNNotificationTrigger",
    "block2",
] }

# The chrome-core / config-core [patch] local-dev overrides live in the workspace-root Cargo.toml
# (../Cargo.toml), scoped #PATCH:chrome# / #PATCH:config# — managed by `just chrome-dev`/`chrome-pin`
# + `config-dev`/`config-pin`. A [patch] must sit in the workspace root, not a member manifest.
