[package]
name = "curator-config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = "2"
# Shared house-style TOML formatter + colour parsing, shared with warden and lector. Pinned by rev —
# the shared formatter must format identically in all three apps, so an unpinned dep floating forward
# in only one repo would silently diverge `curator fmt` from its siblings. Bump in lockstep with
# warden, lector, and config-core.
config-core = { git = "https://github.com/Lockyc/config-core", rev = "2e98316e2d32fdbc05c8999cccb32d8b243395f1" }
